[project]
name = "learning-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.2.0",
    "equinox>=0.11.11",
    "jax>=0.5.0",
    "jaxtyping>=0.2.37",
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
